kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-atlas
  namespace: default
spec:
  type: ExternalName
  externalName: hikemeet-stage.yt9tfsv.mongodb.net
