kubernetes/hikemeet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hikemeet-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hikemeet.com 
      secretName: hikemeet-tls
  rules:
    - host: hikemeet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hikemeet-service
                port:
                  number: 80
